# lpcxpresso55S69

./: .gitignore  README.md
lpc55s6x/: Cargo.toml  asm.s  assemble.sh  build.rs  jlink.gdb  link.x
lpc55s6x/.cargo/: config
lpc55s6x/examples/: interrupt.rs  led.rs  mailbox.rs  smallest.rs  xinterrupt.rs  xled.rs  xschedule.rs  xspawn.rs
lpc55s6x/src/: lib.rs
